docs: update project documentation with detailed descriptions and requirements

--- a/capitulos/ch1-introducao.tex
+++ b/capitulos/ch1-introducao.tex
@@ -6,19 +6,24 @@
 \label{sec-intro}
 \vspace{-1cm}
 
-Este documento apresenta o projeto (\textit{design}) do sistema \emph{\imprimirtitulo}. 
+Este documento apresenta o projeto (\textit{design}) do sistema \emph{\imprimirtitulo}, derivado do trabalho prático da disciplina de Engenharia de Software I.
 
-\vitor{Completar o parágrafo acima com uma breve descrição do sistema.}
+O sistema Pet Shop visa apoiar as operações e o gerenciamento de um estabelecimento de serviços e produtos para animais, abrangendo o cadastro e login de clientes e funcionários, gerenciamento de filiais, controle de estoque, agendamento de serviços, registro de vendas e emissão de relatórios.
+Os objetivos do sistema incluem facilitar o atendimento ao cliente, otimizar processos internos e prover relatórios de desempenho e gestão.
 
-Além desta introdução, este documento está organizado da seguinte forma: 
-	a Seção~\ref{sec-plataforma} apresenta a plataforma de software utilizada na implementação do sistema;
-	a Seção~\ref{sec-rnfs} apresenta a especificação dos requisitos não funcionais (atributos de qualidade), definindo as táticas e o tratamento a serem dados aos atributos de qualidade considerados condutores da arquitetura; 
-	a Seção~\ref{sec-arquitetura} apresenta a arquitetura de software; por fim, 
-	a Seção~\ref{sec-componentes} apresenta o projeto dos componentes da arquitetura.
-	
+Além desta introdução, este documento está organizado da seguinte forma:
+a Seção~\ref{sec-plataforma} apresenta a plataforma de software utilizada na implementação do sistema;
+a Seção~\ref{sec-rnfs} apresenta a especificação dos requisitos não funcionais (atributos de qualidade), definindo as táticas e o tratamento a serem dados aos atributos de qualidade considerados condutores da arquitetura;
+a Seção~\ref{sec-arquitetura} apresenta a arquitetura de software; por fim,
+a Seção~\ref{sec-componentes} apresenta o projeto dos componentes da arquitetura.
+
 Este documento foi produzido por:
 \begin{itemize}
-	\item \hl{Nome dos(as) estudantes em ordem alfabética.}
-	\item \hl{Remover a marcação em amarelo (comando \textbackslash hl\{\} no \LaTeX).}
+	\item Álvaro Davi S. Alves \
+	\item Gabriel Lima \
+	\item Mateus Loss \
+	\item Pedro Quedevez \
+
 \end{itemize}
 
+\vitor{Remover a \hl{marcação em amarelo} (comando \textbackslash hl\{\}) e comentarios do professor (comando \textbackslash vitor\{\}) de todo o documento.}
