--- a/capitulos/ch2-plataforma.tex
+++ b/capitulos/ch2-plataforma.tex
@@ -7,34 +7,36 @@
 \vspace{-1cm}
 
 
-\vitor{Esta seção deve apresentar a plataforma de implementação a ser adotada para o desenvolvimento do sistema, incluindo: linguagem de programação, mecanismo de persistência de dados e componentes ou \textit{frameworks} a serem usados. Adicionar às tabelas quantas linhas forem necessárias. Remover a marcação em amarelo (comando \textbackslash hl\{\} no \LaTeX). Como exemplo, vide documento de projeto do Marvin.}
-
-
 %=======================================================================================================
 %			Tabela de Plataforma de Desenvolvimento e Tecnologias Utilizadas
 %=======================================================================================================
 
+A plataforma de desenvolvimento do sistema \emph{\imprimirtitulo} tem como seu principal ambiente os navegadores web modernos, como Google Chrome, Mozilla Firefox e Microsoft Edge e se baseia em tecnologias amplamente utilizadas no desenvolvimento web.
+
 Na Tabela~\ref{tabela-plataforma} são listadas as tecnologias utilizadas no desenvolvimento da ferramenta, bem como o propósito de sua utilização.
 
 \begin{footnotesize}
-\begin{longtable}{|p{2.5cm}|c|p{5cm}|p{5.5cm}|}
-	\caption{Plataforma de Desenvolvimento e Tecnologias Utilizadas.}	
-	\label{tabela-plataforma}\\\hline
+	\begin{longtable}{|p{2.5cm}|c|p{5cm}|p{5.5cm}|}
+		\caption{Plataforma de Desenvolvimento e Tecnologias Utilizadas.}
+		\label{tabela-plataforma}                                                                                                                                                                                        \\\hline
 
-	\rowcolor{lightgray}
-	\textbf{Tecnologia} & \textbf{Versão} & \textbf{Descrição} & \textbf{Propósito} \\\hline 
-	\endfirsthead
-	\hline
-	\rowcolor{lightgray}
-	\textbf{Tecnologia} & \textbf{Versão} & \textbf{Descrição} & \textbf{Propósito} \\\hline 
-	\endhead
-		
-	\hl{Nome} & \hl{X.Y} & \hl{O que é?} & \hl{Para que serve?} \\ \hline
+		\rowcolor{lightgray}
+		\textbf{Tecnologia}       & \textbf{Versão} & \textbf{Descrição}                                    & \textbf{Propósito}                                                                                         \\\hline
+		\endfirsthead
+		\hline
+		\rowcolor{lightgray}
+		\textbf{Tecnologia}       & \textbf{Versão} & \textbf{Descrição}                                    & \textbf{Propósito}                                                                                         \\\hline
+		\endhead
 
-\end{longtable}
+		Angular                   & 15.x.x          & Framework para TypeScript                             & Utilizado para o desenvolvimento do frontend do sistema.                                                   \\ \hline
+		Java                      & 17.x.x          & Linguagem de programação                              & Utilizada para o desenvolvimento do backend do sistema.                                                    \\ \hline
+		Spring Boot               & 3.x.x           & Framework para Java                                   & Utilizado para facilitar a criação de aplicações web e serviços RESTful no backend.                        \\ \hline
+		PostgreSQL                & 15.x.x          & Sistema de gerenciamento de banco de dados relacional & Utilizado para armazenar os dados do sistema (statefull).                                                  \\ \hline
+		Jakarta CDI               & 3.x.x           & Especificação para Injeção de Dependências em Java    & Utilizado para gerenciar a criação e o ciclo de vida dos objetos no backend.                               \\ \hline
+		Jakarta Persistence (JPA) & 3.x.x           & Especificação para Persistência de Dados em Java      & Utilizado para mapear objetos Java para tabelas do banco de dados relacional (ORM).                        \\ \hline
+		Hibernate                 & 6.x.x           & Framework de mapeamento objeto-relacional (ORM)       & Utilizado para implementar a persistência de dados no backend, facilitando operações com o banco de dados. \\ \hline
+	\end{longtable}
 \end{footnotesize}
-
-
 
 
 
@@ -46,18 +48,23 @@ Na Tabela~\ref{tabela-plataforma} são listadas as tecnologias utilizadas no des
 Na Tabela~\ref{tabela-software} vemos os softwares que apoiaram o desenvolvimento de documentos e também do código fonte.
 
 \begin{footnotesize}
-\begin{longtable}{|p{2.5cm}|c|p{5cm}|p{5.5cm}|}
-	\caption{Softwares de Apoio ao Desenvolvimento do Projeto}	
-	\label{tabela-software}\\\hline
-	
-	\rowcolor{lightgray}
-	\textbf{Tecnologia} & \textbf{Versão} & \textbf{Descrição} & \textbf{Propósito} \\\hline 
-	\endfirsthead
-	\hline
-	\rowcolor{lightgray}
-	\textbf{Tecnologia} & \textbf{Versão} & \textbf{Descrição} & \textbf{Propósito} \\\hline 
-	\endhead
-		
-	\hl{Nome} & \hl{X.Y} & \hl{O que é?} & \hl{Para que serve?} \\ \hline
-\end{longtable}
+	\begin{longtable}{|p{2.5cm}|c|p{5cm}|p{5.5cm}|}
+		\caption{Softwares de Apoio ao Desenvolvimento do Projeto}
+		\label{tabela-software}                                                                                                                                                                                        \\\hline
+
+		\rowcolor{lightgray}
+		\textbf{Tecnologia} & \textbf{Versão} & \textbf{Descrição}                                                    & \textbf{Propósito}                                                                             \\\hline
+		\endfirsthead
+		\hline
+		\rowcolor{lightgray}
+		\textbf{Tecnologia} & \textbf{Versão} & \textbf{Descrição}                                                    & \textbf{Propósito}                                                                             \\\hline
+		\endhead
+
+		Visual Studio Code  & 1.105.1         & Editor de código-fonte com suporte a várias linguagens de programação & Utilizado para o desenvolvimento do código fonte do sistema.                                   \\ \hline
+		\LaTeX              & TeX Live 2023   & Sistema de compilação de documentos                                   & Utilizado para a produção do documento de projeto do sistema.                                  \\ \hline
+		Overleaf            & -               & Plataforma online para edição de documentos em \LaTeX                 & Utilizado para a produção colaborativa do documento de projeto do sistema.                     \\ \hline
+		Draw.io             & -               & Ferramenta online para criação de diagramas UML                       & Utilizado para a criação dos diagramas UML presentes no documento.                             \\ \hline
+		Git                 & -               & Sistema de controle de versão distribuído                             & Utilizado para o versionamento do código fonte do sistema.                                     \\ \hline
+		GitHub              & -               & Plataforma de hospedagem de código-fonte                              & Utilizado para controle de versão e colaboração no desenvolvimento do código fonte do sistema. \\ \hline
+	\end{longtable}
 \end{footnotesize}
