feat: update architecture section and version history in project documentation

--- a/projeto-nomesistema.tex
+++ b/projeto-nomesistema.tex
@@ -276,11 +276,12 @@
 	\vspace{0.5cm}
 	\begin{tabular}{|c|p{45mm}|c|p{60mm}|} \hline
 
-		\textbf{Versão} & \textbf{Responsável} & \textbf{Data} & \textbf{Alterações}                                                    \\ \hline
+		\textbf{Versão} & \textbf{Responsável} & \textbf{Data} & \textbf{Alterações}                                                                                                          \\ \hline
 
-		1.0             & Mateus Loss          & 19/10/2025    & Versão inicial.                                                        \\\hline
-		1.1             & Gabriel Lima         & 23/10/2025    & Especificação dos requisitos não funcionais (Cap. \ref{sec-rnfs}).     \\\hline
-		1.2             & Álvaro Alves         & 24/10/2025    & Especificação da plataforma e tecnologias (Cap. \ref{sec-plataforma}). \\\hline
+		1.0             & Mateus Loss          & 19/10/2025    & Versão inicial.                                                                                                              \\\hline
+		1.1             & Gabriel Lima         & 23/10/2025    & Especificação dos requisitos não funcionais (Cap. \ref{sec-rnfs}) e das camadas da arquitetura (Cap. \ref{sec-arquitetura}). \\\hline
+		1.2             & Álvaro Alves         & 24/10/2025    & Especificação da plataforma e tecnologias (Cap. \ref{sec-plataforma}).                                                       \\\hline
+		1.3             & Álvaro Alves         & 26/10/2025    & Construção inicial da arquitetura (Cap. \ref{sec-arquitetura}).                                                              \\\hline
 	\end{tabular}
 \end{center}
 \newpage
