--- a/capitulos/ch4-arquitetura.tex
+++ b/capitulos/ch4-arquitetura.tex
@@ -12,7 +12,8 @@ A Figura~\ref{figura-arquitetura} mostra a arquitetura do sistema \emph{\imprimi
 	\label{figura-arquitetura}
 \end{figure}
 
-\vitor{Substituir a Figura~\ref{figura-arquitetura} pelo diagrama UML da arquitetura do seu projeto e descrevê-la no texto. Caso use alguma arquitetura clássica, incluir referência bibliográfica com BibTeX (ex.:Camada de Serviço~\cite{fowler:book02}). Como exemplo, vide documentos de projeto do Marvin e da Locadora de Carros do prof. Ricardo Falbo.}
+\alvaro{Falta terminar o relacionamento das entidades, melhorar a organização dos pacotes e especificar qual camada/partição cada pacote representa. Alterar arquivo do diagrama: 'Pet Shop.drawio' e substituir a Figura~\ref{figura-arquitetura}.}
+\vitor{Caso use alguma arquitetura clássica, incluir referência bibliográfica com BibTeX (ex.:Camada de Serviço~\cite{fowler:book02}). Como exemplo, vide documentos de projeto do Marvin e da Locadora de Carros do prof. Ricardo Falbo.}
 
 \vspace{0.5cm}
 
