feat: update bibliography and finalize architecture section in project documentation

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -2,6 +2,35 @@
 %% Arquivo de referências bibliográficas.
 %%
 
+@techreport{cockburn2005hexagonal,
+  author    = {Alistair Cockburn},
+  title     = {The Hexagonal (Ports \& Adapters) Architecture},
+  institution = {HaT Technical Report},
+  number    = {2005.02},
+  year      = {2005},
+  date      = {Sept.~4,\,2005}
+}
+
+@article{qureshi2014mvc,
+  author  = {M. R. Jameel Qureshi and Fatima Sabir},
+  title   = {A comparison of Model View Controller and Model View Presenter},
+  journal = {CoRR},
+  volume  = {abs/1408.5786},
+  year    = {2014},
+  note    = {arXiv preprint}
+}
+
+@article{tu2023layered,
+  author  = {Zhenan Tu},
+  title   = {Research on the Application of Layered Architecture in Computer Software Development},
+  journal = {Journal of Computing and Electronic Information Management},
+  volume  = {11},
+  number  = {3},
+  pages   = {34--38},
+  year    = {2023},
+  doi     = {10.54097/jceim.v11i3.08}
+}
+
 @book{fowler:book02,
 	title = {{Patterns of Enterprise Application Architecture}},
 	author = {Fowler, Martin},
