--- a/projeto-nomesistema.tex
+++ b/projeto-nomesistema.tex
@@ -282,6 +282,7 @@
 		1.1             & Gabriel Lima         & 23/10/2025    & Especificação dos requisitos não funcionais (Cap. \ref{sec-rnfs}) e das camadas da arquitetura (Cap. \ref{sec-arquitetura}). \\\hline
 		1.2             & Álvaro Alves         & 24/10/2025    & Especificação da plataforma e tecnologias (Cap. \ref{sec-plataforma}).                                                       \\\hline
 		1.3             & Álvaro Alves         & 26/10/2025    & Construção inicial da arquitetura (Cap. \ref{sec-arquitetura}).                                                              \\\hline
+		1.4             & Álvaro Alves         & 27/10/2025    & Finalização da arquitetura (Cap. \ref{sec-arquitetura}).                                                                     \\\hline
 	\end{tabular}
 \end{center}
 \newpage
@@ -303,7 +304,8 @@
 \vspace*{1.3cm}
 \input{capitulos/ch4-arquitetura}
 \vspace*{1.3cm}
-\input{capitulos/ch5-componentes}
+% TODO - descomentar quando necessário.
+% \input{capitulos/ch5-componentes}
 \endgroup
 
 
