fix: update team member names in introduction and version history

--- a/capitulos/ch1-introducao.tex
+++ b/capitulos/ch1-introducao.tex
@@ -21,8 +21,8 @@ Este documento foi produzido por:
 \begin{itemize}
 	\item Álvaro Davi S. Alves \
 	\item Gabriel Lima \
-	\item Mateus Loss \
-	\item Pedro Quedevez \
+	\item Mateus Malta Loss \
+	\item Pedro Henrique de Castro Cunha Quedevez \
 
 \end{itemize}
 
