fix: remove commented-out input for chapter 5 components in project specification

--- a/projeto-nomesistema.tex
+++ b/projeto-nomesistema.tex
@@ -305,8 +305,7 @@
 \vspace*{1.3cm}
 \input{capitulos/ch4-arquitetura}
 \vspace*{1.3cm}
-% TODO - descomentar quando necessário.
-% \input{capitulos/ch5-componentes}
+\input{capitulos/ch5-componentes}
 \endgroup
 
 
