--- a/capitulos/ch2-plataforma.tex
+++ b/capitulos/ch2-plataforma.tex
@@ -18,23 +18,30 @@ Na Tabela~\ref{tabela-plataforma} são listadas as tecnologias utilizadas no des
 \begin{footnotesize}
 	\begin{longtable}{|p{2.5cm}|c|p{5cm}|p{5.5cm}|}
 		\caption{Plataforma de Desenvolvimento e Tecnologias Utilizadas.}
-		\label{tabela-plataforma}                                                                                                                                                                                        \\\hline
+		\label{tabela-plataforma}                                                                                                                                                                                                                                        \\\hline
 
 		\rowcolor{lightgray}
-		\textbf{Tecnologia}       & \textbf{Versão} & \textbf{Descrição}                                    & \textbf{Propósito}                                                                                         \\\hline
+		\textbf{Tecnologia}       & \textbf{Versão} & \textbf{Descrição}                                                              & \textbf{Propósito}                                                                                                               \\\hline
 		\endfirsthead
 		\hline
 		\rowcolor{lightgray}
-		\textbf{Tecnologia}       & \textbf{Versão} & \textbf{Descrição}                                    & \textbf{Propósito}                                                                                         \\\hline
+		\textbf{Tecnologia}       & \textbf{Versão} & \textbf{Descrição}                                                              & \textbf{Propósito}                                                                                                               \\\hline
 		\endhead
 
-		Angular                   & 15.x.x          & Framework para TypeScript                             & Utilizado para o desenvolvimento do frontend do sistema.                                                   \\ \hline
-		Java                      & 17.x.x          & Linguagem de programação                              & Utilizada para o desenvolvimento do backend do sistema.                                                    \\ \hline
-		Spring Boot               & 3.x.x           & Framework para Java                                   & Utilizado para facilitar a criação de aplicações web e serviços RESTful no backend.                        \\ \hline
-		PostgreSQL                & 15.x.x          & Sistema de gerenciamento de banco de dados relacional & Utilizado para armazenar os dados do sistema (statefull).                                                  \\ \hline
-		Jakarta CDI               & 3.x.x           & Especificação para Injeção de Dependências em Java    & Utilizado para gerenciar a criação e o ciclo de vida dos objetos no backend.                               \\ \hline
-		Jakarta Persistence (JPA) & 3.x.x           & Especificação para Persistência de Dados em Java      & Utilizado para mapear objetos Java para tabelas do banco de dados relacional (ORM).                        \\ \hline
-		Hibernate                 & 6.x.x           & Framework de mapeamento objeto-relacional (ORM)       & Utilizado para implementar a persistência de dados no backend, facilitando operações com o banco de dados. \\ \hline
+		TypeScript                & 5.x.x           & Linguagem de programação baseada em JavaScript com suporte a tipagem estática   & Utilizada para o desenvolvimento do frontend do sistema.                                                                         \\ \hline
+		HTML                      & 5               & Linguagem de marcação para estruturação de páginas web                          & Utilizada para estruturar o conteúdo das páginas web do sistema.                                                                 \\ \hline
+		CSS                       & 3               & Linguagem de estilo para páginas web                                            & Utilizada para estilizar e formatar a aparência das páginas web do sistema.                                                      \\ \hline
+		Angular                   & 15.x.x          & Framework para TypeScript que utiliza HTML+CSS+TS                               & Utilizado para o desenvolvimento do frontend do sistema para renderização de páginas web estáticas e dinâmicas.                  \\ \hline
+		Microsoft Clarity         & -               & Ferramenta de análise de comportamento do usuário em websites                   & Utilizada para monitorar e analisar o comportamento dos usuários na interface do sistema.                                        \\ \hline
+		Java                      & 17.x.x          & Linguagem de programação                                                        & Utilizada para o desenvolvimento do backend do sistema.                                                                          \\ \hline
+		Maven                     & 3.x.x           & Ferramenta de automação de compilação e gerenciamento de dependências para Java & Utilizada para gerenciar as dependências e o ciclo de vida do projeto Java no backend.                                           \\ \hline
+		Spring Boot               & 3.x.x           & Framework para Java                                                             & Utilizado para facilitar a criação de aplicações web e serviços RESTful no backend.                                              \\ \hline
+		PostgreSQL                & 15.x.x          & Sistema de gerenciamento de banco de dados relacional                           & Utilizado para armazenar os dados do sistema (statefull).                                                                        \\ \hline
+		Jakarta Persistence (JPA) & 3.x.x           & Especificação para Persistência de Dados em Java                                & Utilizado para mapear objetos Java para tabelas do banco de dados relacional (ORM).                                              \\ \hline
+		Hibernate                 & 6.x.x           & Framework de mapeamento objeto-relacional (ORM)                                 & Utilizado para implementar a persistência de dados no backend, facilitando operações com o banco de dados.                       \\ \hline
+		AWS                       & -               & Plataforma de serviços em nuvem                                                 & Utilizada para hospedar a aplicação, banco de dados e outros serviços necessários para o funcionamento do sistema.               \\ \hline
+		Sentry                    & -               & Plataforma de monitoramento de erros e desempenho                               & Utilizada para rastrear e monitorar erros e exceções na aplicação em produção, além do desempenho de uma ação ou funcionalidade. \\ \hline
+		DataDog                   & -               & Plataforma de monitoramento e análise de desempenho                             & Utilizada para monitorar o desempenho e a saúde da aplicação em produção.                                                        \\ \hline
 	\end{longtable}
 \end{footnotesize}
 
@@ -50,21 +57,22 @@ Na Tabela~\ref{tabela-software} vemos os softwares que apoiaram o desenvolviment
 \begin{footnotesize}
 	\begin{longtable}{|p{2.5cm}|c|p{5cm}|p{5.5cm}|}
 		\caption{Softwares de Apoio ao Desenvolvimento do Projeto}
-		\label{tabela-software}                                                                                                                                                                                        \\\hline
+		\label{tabela-software}                                                                                                                                                                                                      \\\hline
 
 		\rowcolor{lightgray}
-		\textbf{Tecnologia} & \textbf{Versão} & \textbf{Descrição}                                                    & \textbf{Propósito}                                                                             \\\hline
+		\textbf{Tecnologia}               & \textbf{Versão} & \textbf{Descrição}                                                    & \textbf{Propósito}                                                                             \\\hline
 		\endfirsthead
 		\hline
 		\rowcolor{lightgray}
-		\textbf{Tecnologia} & \textbf{Versão} & \textbf{Descrição}                                                    & \textbf{Propósito}                                                                             \\\hline
+		\textbf{Tecnologia}               & \textbf{Versão} & \textbf{Descrição}                                                    & \textbf{Propósito}                                                                             \\\hline
 		\endhead
 
-		Visual Studio Code  & 1.105.1         & Editor de código-fonte com suporte a várias linguagens de programação & Utilizado para o desenvolvimento do código fonte do sistema.                                   \\ \hline
-		\LaTeX              & TeX Live 2023   & Sistema de compilação de documentos                                   & Utilizado para a produção do documento de projeto do sistema.                                  \\ \hline
-		Overleaf            & -               & Plataforma online para edição de documentos em \LaTeX                 & Utilizado para a produção colaborativa do documento de projeto do sistema.                     \\ \hline
-		Draw.io             & -               & Ferramenta online para criação de diagramas UML                       & Utilizado para a criação dos diagramas UML presentes no documento.                             \\ \hline
-		Git                 & -               & Sistema de controle de versão distribuído                             & Utilizado para o versionamento do código fonte do sistema.                                     \\ \hline
-		GitHub              & -               & Plataforma de hospedagem de código-fonte                              & Utilizado para controle de versão e colaboração no desenvolvimento do código fonte do sistema. \\ \hline
+		Visual Studio Code                & 1.105.1         & Editor de código-fonte com suporte a várias linguagens de programação & Utilizado para o desenvolvimento do código fonte do sistema.                                   \\ \hline
+		\LaTeX                            & TeX Live 2023   & Sistema de compilação de documentos                                   & Utilizado para a produção do documento de projeto do sistema.                                  \\ \hline
+		Overleaf                          & -               & Plataforma online para edição de documentos em \LaTeX                 & Utilizado para a produção colaborativa do documento de projeto do sistema.                     \\ \hline
+		Draw.io                           & -               & Ferramenta online para criação de diagramas UML                       & Utilizado para a criação dos diagramas UML presentes no documento.                             \\ \hline
+		Visual Paradigm Community Edition & 17.3.x          & Ferramenta para modelagem UML                                         & Utilizado para a criação dos diagramas UML presentes no documento.                             \\ \hline
+		Git                               & -               & Sistema de controle de versão distribuído                             & Utilizado para o versionamento do código fonte do sistema.                                     \\ \hline
+		GitHub                            & -               & Plataforma de hospedagem de código-fonte                              & Utilizado para controle de versão e colaboração no desenvolvimento do código fonte do sistema. \\ \hline
 	\end{longtable}
 \end{footnotesize}
