--- a/projeto-nomesistema.tex
+++ b/projeto-nomesistema.tex
@@ -284,6 +284,7 @@
 		1.3             & Álvaro Alves         & 24/10/2025    & Especificação da plataforma e tecnologias (Cap. \ref{sec-plataforma}).                                                       \\\hline
 		1.4             & Álvaro Alves         & 26/10/2025    & Construção inicial da arquitetura (Cap. \ref{sec-arquitetura}).                                                              \\\hline
 		2.0             & Álvaro Alves         & 27/10/2025    & Finalização da arquitetura (Cap. \ref{sec-arquitetura}).                                                                     \\\hline
+		2.1             & Álvaro Alves         & 06/11/2025    & Correções dos Cap. \ref{sec-intro} a Cap. \ref{sec-rnfs} após avaliação.                                                     \\\hline
 	\end{tabular}
 \end{center}
 \newpage
